# Bamurai

./: .gitignore  .pyproject.toml  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml
bamurai/: __init__.py  assign_samples.py  cli.py  core.py  divide.py  extract_sample.py  get_hto.py  split.py  split_samples.py  stats.py  test.py  utils.py  utils_samples.py  validate.py  version.py
tests/: conftest.py  generate_test_data.py  test_chunk.py  test_cli.py  test_core.py  test_divide.py  test_generate_test_data.py  test_get_hto.py  test_sample_commands.py  test_split.py  test_stats.py  test_utils.py  test_utils_samples.py  test_validate.py
tests/data/: MANIFEST.txt  bad_header.fastq  bad_separator.fastq  barcoded.bam  barcoded.fastq  barcoded.sam  both_columns.tsv  both_tags.bam  cell_donor.tsv  concat_in_0.bam  concat_in_1.bam  custom_columns.tsv  hto_R1.fastq  hto_R2.fastq  hto_multi_R1.fastq  hto_multi_R2.fastq  invalid_chars.fastq  iupac_ok.fastq  length_mismatch.fastq  mapping.tsv  missing_barcode.tsv  missing_donor.tsv  noqual.bam  noseq.bam  numeric_barcodes.tsv  reads.bam  reads.fastq  reads.sam  rx.bam  truncated.fastq
