[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Bamurai"
version = { file = "VERSION" }
description = "A package for splitting reads BAM files into smaller fragments."
authors = [{ name = "Shian Su" }]
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "pysam",
    "numpy",
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[project.scripts]
bamurai = "bamurai.cli:main"
