[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bamurai"
dynamic = ["version"]
description = "A package for splitting reads in BAM/FASTQ files into smaller fragments."
authors = [{ name = "Shian Su" }]
readme = "README.md"
license = { text = "Apache-2.0" }
dependencies = [
    "pysam",
    "numpy",
    "pandas",
]

[metadata]
display_name = "Bamurai"

[tool.setuptools.dynamic]
version = {file = ["bamurai/VERSION"]}

[project.optional-dependencies]
dev = ["pytest", "black", "mypy", "coverage", "pytest-cov"]

[project.scripts]
bamurai = "bamurai.cli:main"

[tool.setuptools]
package-data = {"bamurai" = ["VERSION"]}

[tool.coverage.run]
source = ["bamurai"]
branch = true

[tool.coverage.report]
show_missing = true
# Progress-bar, background-thread and defensive plumbing carries no logic worth
# asserting; exclude it from the coverage denominator rather than writing
# brittle UI/threading tests for it.
exclude_also = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
    "raise NotImplementedError",
    # Background read-counting threads swallow errors by design.
    "except Exception",
]
